# SoulBlog

./: Cargo.toml  history.txt
src/: main.rs
src/models/: article.rs
src/routes/: ai.rs  auth.rs  mod.rs  notifications.rs
src/services/: article.rs  auth.rs  database.rs  notification.rs  tag.rs
src/utils/: middleware.rs  slug.rs
