[package]
name = "rainbow-blog"
version = "0.1.0"
edition = "2021"
authors = ["Rainbow Hub Team"]
description = "A Medium-style blogging platform built with Rust and Axum"
license = "MIT"
repository = "https://github.com/rainbow-hub/rainbow-blog"
keywords = ["blog", "medium", "publishing", "axum", "surrealdb"]

[dependencies]
# Web框架 (与Rainbow-docs相同版本)
axum = { version = "0.7", features = ["multipart", "ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
headers = "0.4"
tower-http = { version = "0.5", features = ["cors", "compression-br", "compression-gzip", "trace"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit", "make"] }
tokio = { version = "1.28", features = ["full"] }

# 数据库 (迁移到 SurrealDB 3.0)
surrealdb = { version = "3.0.0", features = ["protocol-http", "protocol-ws"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }

# 使用soulcore进行数据库操作
soulcore = { git = "https://github.com/3W1shes/soulcore.git", branch = "main", default-features = false, features = ["storage", "surrealdb-http"] }

# HTTP客户端
reqwest = { version = "0.11", features = ["json", "multipart"] }

# WebSocket支持
futures = "0.3"

# 认证相关 (与Rainbow-Auth集成)
jsonwebtoken = "8.3"
argon2 = "0.5"

# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 日志和追踪
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# 配置管理
config = "0.13"
dotenv = "0.15"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 工具库
uuid = { version = "1.3", features = ["v4", "serde"] }
validator = { version = "0.16", features = ["derive"] }
async-trait = "0.1"
lazy_static = "1.4"
once_cell = "1.17"
parking_lot = "0.12"
dashmap = "5.5"

# URL和路径处理
url = "2.3"
urlencoding = "2.1"
slug = "0.1"

# 正则表达式
regex = "1.7"

# 随机数
rand = "0.8"

# Base64编码
base64 = "0.21"

# 哈希
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

# Markdown处理
pulldown-cmark = { version = "0.9", features = ["simd"] }
comrak = { version = "0.19", features = ["syntect"] }
syntect = "5.0"
ammonia = "3.3" # HTML清理
maplit = "1.0" # 用于hashset!和hashmap!宏

# 图片处理
image = { version = "0.24", features = ["jpeg", "png", "gif", "webp"] }
imagesize = "0.11"

# 邮件发送
lettre = { version = "0.10", features = ["builder", "smtp-transport", "tokio1-native-tls"] }
handlebars = "4.3"

# Redis缓存 (可选)
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"], optional = true }

# 文件上传到S3
aws-sdk-s3 = { version = "0.24", optional = true }
aws-config = { version = "0.54", optional = true }

# RSS/Atom订阅
rss = { version = "2.0", optional = true }
atom_syndication = { version = "0.12", optional = true }

# 搜索引擎优化
sitemap = { version = "0.4", optional = true }

# 支付集成
stripe = { version = "0.0.5", optional = true }

# 实时功能 (WebSocket)
tokio-tungstenite = { version = "0.18", optional = true }
futures-util = "0.3"

# 速率限制
governor = { version = "0.5", features = ["std", "jitter"] }

# DNS解析
trust-dns-resolver = "0.23"

# 指标收集
metrics = { version = "0.21", optional = true }
metrics-exporter-prometheus = { version = "0.12", optional = true }

[dev-dependencies]
# 测试工具
tokio-test = "0.4"
mockall = "0.11"
fake = "2.5"
wiremock = "0.5"

# 基准测试
criterion = { version = "0.5", features = ["html_reports"] }

# 属性测试
proptest = "1.2"

[features]
default = []
redis-cache = ["redis"]
s3-storage = ["aws-sdk-s3", "aws-config"]
email = []
rss = ["dep:rss", "dep:atom_syndication"]
seo = ["sitemap"]
payments = ["stripe"]
websocket = ["tokio-tungstenite"]
metrics = ["dep:metrics", "metrics-exporter-prometheus"]
full = ["redis-cache", "s3-storage", "email", "rss", "seo", "payments", "websocket", "metrics"]

# 优化编译
[profile.release]
opt-level = 3
lto = false
codegen-units = 16
strip = true

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3
